<resources>
    <string name="app_name">Bilito</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="userInfo">Ⓤⓢⓔⓡ Ⓘⓝⓕⓞ</string>
    <string name="profileimage">ProfileImage</string>
    <string name="profileimage">ProfileImage</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="userName">UserName</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up here!</string>
    <string name="sign_up_here">Sign Up here!</string>
    <string name="email">Email</string>
    <string name="passwords">Password</string>
    <string name="phone_number">Phone Number</string>
</resources>