<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/AuthenticationBackground"
    tools:context=".profile.ui.activity.AuthenticationActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="60dp"
        app:cardElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:shadowColor="#00000000"
            android:text="𝕭𝖎𝖑𝖎𝖙𝖔 𝕮𝖎𝖓𝖊𝖒𝖆"
            android:textColor="#D9F1BE"
            android:textColorHighlight="#00000000"
            android:textColorLink="#00000000"
            android:textSize="35dp"
            android:textStyle="bold|italic"
            tools:ignore="HardcodedText,SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="40dp"
            android:onClick="loginButton"
            android:text="@string/login"
            app:icon="@drawable/ic_baseline_login"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="290dp"
            android:layout_marginBottom="40dp"
            android:onClick="signUpButton"
            android:text="@string/sign_up_here"
            android:textSize="10dp"
            tools:ignore="SpUsage,UsingOnClickInXml" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signUpCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269">

        <ImageView
            android:id="@+id/imageProfileView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@color/onPrimary"
            android:contentDescription="@string/profileImage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_account_circle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="Password"
            android:background="#FFFFFF"
            android:ems="20"
            android:hint="@string/passwords"
            android:inputType="textPassword"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="213dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="Email"
            android:background="#FFFFFF"
            android:ems="20"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="266dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="Phone"
            android:background="#FFFFFF"
            android:ems="20"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="LabelFor" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>